[package]
name = "dustdb"
version = "0.1.0"
authors = ["Matthew Roy <matthew@saplink.io>"]
edition = "2021"

[dependencies]
rand = "0.8.5"
dustcfg = { path = "../dustcfg" }
dustlog = { path = "../dustlog" }
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.12"
tokio-util = { version = "0.7.7", features = ["codec"] }
futures = "0.3.26"
chrono = "0.4.24"
